chore: improve logs and update readme
